# gmmfun

./: .gitignore  README.md  requirements.txt  setup.cfg
notebooks/: README.md  gmmfun-example-01-usage.ipynb  gmmfun-example-02-asymptotics.ipynb  gmmfun-example-03-linear-comb-rvs.ipynb  gmmfunn-example-01-usage.ipynb
src/gmmfun/: __init__.py  gmm_base.py  gmm_cgf_4.py  gmm_mgf.py  gmm_mgf_4.py  gmm_mgf_avar.py  gmm_mgf_cen.py  gmm_mgf_cen_scl.py  gmm_mgf_std.py  utils.py
tests/: conftest.py  test_gmm_base_derived.py  test_mgf_basics.py  test_mgf_by_comparison.py
