# Copyright 2023 Jesse Windle                                                                                     

# Use of this source code is governed by an MIT-style license that can
# be found in the LICENSE file.


[metadata]
name = gmmfun
version = 0.1
author = Jesse Windle
author_email = jesse@bayesfactor.net
description = Estimate population parameters using a moment generating function 
long_description = file: README.md
long_description_content_type = text/markdown


[options]
python_requires = >=3
package_dir =
    = src
packages =
    gmmfun
install_requires =
    numpy
    scipy
    typing_extensions
    jax
    jaxopt
    

